# dune-weaver-pi

./: .gitignore  CONTRIBUTING.md  README.md  dw  main.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements-nonrpi.txt  setup-pi.sh
.github/workflows/: version-check.yml
dune-weaver-touch/: backend.py  firmware_client.py  main.py  png_cache_manager.py
dune-weaver-touch/models/: pattern_model.py  playlist_model.py
dune-weaver-touch/qml/components/: DwColorPicker.qml
dune-weaver-touch/qml/pages/: ExecutionPage.qml  LedControlPage.qml
frontend/src/__tests__/pages/: BrowsePage.test.tsx
frontend/src/components/: NowPlayingBar.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useBackendConnection.ts
frontend/src/pages/: BrowsePage.tsx  PlaylistsPage.tsx  SettingsPage.tsx
frontend/src/stores/: useStatusStore.ts
modules/connection/: connection_manager.py  fluidnc_client.py
modules/core/: board_cache.py  board_settings.py  cache_manager.py  execution.py  log_handler.py  pattern_manager.py  playlist_manager.py  preview.py  process_thr.py  state.py  version_manager.py
modules/led/: led_controller.py  led_interface.py
modules/mqtt/: __init__.py  base.py  factory.py  handler.py  mock.py  utils.py
modules/update/: update_manager.py
modules/wifi/: manager.py  router.py
tests/: conftest.py
tests/unit/: conftest.py  test_api_patterns.py  test_api_playlists.py  test_api_status.py  test_board_cache.py  test_board_led_controller.py  test_board_settings.py  test_connection_manager.py  test_execution.py  test_pattern_manager.py  test_playlist_manager.py
